--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ss",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node web.js"
   },
   "keywords": [],
   "author": "",
