--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "flutterserver",
+  "name": "Fconline-node",
   "version": "1.0.0",
-  "description": "ss",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node web.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/monho/Fconline-node.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/monho/Fconline-node/issues"
+  },
+  "homepage": "https://github.com/monho/Fconline-node#readme",
   "dependencies": {
     "await": "^0.2.6",
     "axios": "^1.6.2",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
-    "puppeteer": "^19.11.1"
+    "puppeteer": "^21.6.1"
   }
 }
