[EDIT] userRank Api rogic 수정

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
             "src": "/(.*)",
             "dest": "/"
         }
-    ]
+    ],
+    "functions": {
+        "api/*": {
+          "runtime": "nodejs18.x",
+          "memory": 1024
+        }
+      }
 }
