--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
+
 {
-    "version": 2,
-    "builds":[
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
-    ]
-    
-}
+    "builds": [{ "src": "vercel-build", "use": "@vercel/node" }],
+    "functions": { "api/*": { "runtime": "vercel-node.18" } }
+  }
